Fixed Hero Overflow

--- a/src/app/AboutMeContent/sections/HeroSection/index.module.scss
+++ b/src/app/AboutMeContent/sections/HeroSection/index.module.scss
@@ -9,6 +9,7 @@
   display: flex;
   font-family: "Oleo Script", serif;
   padding: 5dvw;
+  overflow: hidden;
 }
 
 .grid {
